feature: add email support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2018"
 [dependencies]
 clokwerk = "0.3.5"
 envy = "0.4"
+mailgun-rs = "0.1.3"
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 serde = { version = "1.0.126", features = ["derive"] }
+serde_with = "1.9.1"
 tokio = { version = "1", features = ["full"] }
