--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,17 +2,21 @@
 name = "miradors"
 version = "0.1.0"
 authors = ["Benjamin Chastanier <benjamin.chastanier@gmail.com>"]
-edition = "2018"
+description = "A very very (very?) basic poor man tool to check website uptime on a scheduled basis."
+edition = "2021"
+repository = "https://github.com/benjaminch/miradors"
+license = "MIT"
+keywords = ["website-uptime-monitoring"]
+categories = ["command-line-utilities"]
+documentation = "https://github.com/benjaminch/miradors#readme"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-envy = "0.4"
-mailgun-rs = "0.1.3"
+mailgun-rs = "0.1.4"
 reqwest = { version = "0.11", features = ["json", "blocking"] }
-serde = { version = "1.0.126", features = ["derive"] }
+serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0"
-serde_with = "1.9.1"
-tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
-tracing-subscriber = "0.2.0"
+tracing-subscriber = "0.3.16"
